Cleanup documentation.